remove dockerfile comment